Changed target framework to 4.0 to make compatible with a wider range of .NET framework versions.

--- a/Redzen/Redzen.csproj
+++ b/Redzen/Redzen.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Redzen</RootNamespace>
     <AssemblyName>Redzen</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="colindgreen.pfx" />
+    <None Include="RedZen.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
