--- a/Redzen/RedZen.nuspec
+++ b/Redzen/RedZen.nuspec
@@ -10,13 +10,11 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>
-      XorShiftRandom
-      Removed performance boost trick (casting uint to double via an int); this is not necessary when using the new 64bit JITter (RyuJIT).
-      Added UNSAFE compiler directive, and un-commented NextBytesUnsafe (and renamed it to NextBytes8).
-      Added NextFloat()
-      Changed target framework to 4.0 to make compatible with a wider range of .NET framework versions.
+ * Added IRandomSource as an abstraction over XorShiftRandom.
+ * Added IContinuousDistriubtionSampler as an abstraction over ZigguratGaussianSampler and BoxMullerGaussianSampler.
+ * Removed csproj reference to signing key that isn't in the git repository.
     </releaseNotes>
-    <copyright>Copyright Colin D. Green 2016</copyright>
+    <copyright>Copyright Colin D. Green 2017</copyright>
     <tags>C# .NET rng ziggurat gaussian io sorting</tags>
     <dependencies />
   </metadata>
