nuget-instructions.txt excluded from package content.

--- a/Redzen/Redzen.csproj
+++ b/Redzen/Redzen.csproj
@@ -94,7 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="LICENSE.txt" />
-    <Content Include="nuget-instructions.txt" />
+    <None Include="nuget-instructions.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
