Added SearchUtils class with BinarySearch method.

--- a/Redzen/Redzen.csproj
+++ b/Redzen/Redzen.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Numerics\NumericsUtils.cs" />
     <Compile Include="Numerics\DiscreteDistributionUtils.cs" />
     <Compile Include="Numerics\DiscreteDistribution.cs" />
+    <Compile Include="SearchUtils.cs" />
     <Compile Include="Sorting\ParallelSort.cs" />
     <Compile Include="Sorting\SortUtils.cs" />
     <Compile Include="Structures\CircularBuffer.cs" />
