Added UniformDistribution classes (float and double variants).

--- a/Redzen.UnitTests/Redzen.UnitTests.csproj
+++ b/Redzen.UnitTests/Redzen.UnitTests.csproj
@@ -79,6 +79,8 @@
     <Compile Include="MemoryBlockStreamTests.cs" />
     <Compile Include="MemoryStreamFuzzer.cs" />
     <Compile Include="DiscreteDistributionTests.cs" />
+    <Compile Include="Random\Double\UniformDistributionTests.cs" />
+    <Compile Include="Random\Float\UniformDistributionTests.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="XorShiftRandomTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
