--- a/Redzen.UnitTests/Redzen.UnitTests.csproj
+++ b/Redzen.UnitTests/Redzen.UnitTests.csproj
@@ -79,7 +79,10 @@
     <Compile Include="MemoryBlockStreamTests.cs" />
     <Compile Include="MemoryStreamFuzzer.cs" />
     <Compile Include="DiscreteDistributionTests.cs" />
+    <Compile Include="Random\Double\GaussianDistributionTestUtils.cs" />
     <Compile Include="Random\Double\UniformDistributionTests.cs" />
+    <Compile Include="Random\Double\BoxMullerGaussianDistributionTests.cs" />
+    <Compile Include="Random\Double\ZigguratGaussianDistributionTests.cs" />
     <Compile Include="Random\Float\UniformDistributionTests.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="XorShiftRandomTests.cs" />
