--- a/Redzen.Benchmarks/packages.config
+++ b/Redzen.Benchmarks/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BenchmarkDotNet" version="0.10.9" targetFramework="net461" />
-  <package id="BenchmarkDotNet.Core" version="0.10.9" targetFramework="net461" />
-  <package id="BenchmarkDotNet.Toolchains.Roslyn" version="0.10.9" targetFramework="net461" />
+  <package id="BenchmarkDotNet" version="0.10.11" targetFramework="net461" />
+  <package id="BenchmarkDotNet.Core" version="0.10.11" targetFramework="net461" />
+  <package id="BenchmarkDotNet.Toolchains.Roslyn" version="0.10.11" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.3.2" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.3.2" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.6.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.0" targetFramework="net461" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.4" targetFramework="net461" />
   <package id="Microsoft.Win32.Registry" version="4.4.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
@@ -34,12 +34,12 @@
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.AccessControl" version="4.4.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.AccessControl" version="4.4.1" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.1" targetFramework="net461" />
-  <package id="System.Security.Principal.Windows" version="4.4.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.4.1" targetFramework="net461" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.CodePages" version="4.4.0" targetFramework="net461" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
@@ -52,6 +52,7 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.XmlSerializer" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net461" />
 </packages>
