ProbabilisticRound unit test.

--- a/Redzen.UnitTests/Redzen.UnitTests.csproj
+++ b/Redzen.UnitTests/Redzen.UnitTests.csproj
@@ -80,6 +80,7 @@
     <Compile Include="MemoryBlockStreamTests.cs" />
     <Compile Include="MemoryStreamFuzzer.cs" />
     <Compile Include="DiscreteDistributionTests.cs" />
+    <Compile Include="Numerics\NumericsUtilsTests.cs" />
     <Compile Include="Random\Double\GaussianDistributionTestUtils.cs" />
     <Compile Include="Random\Double\UniformDistributionTests.cs" />
     <Compile Include="Random\Double\BoxMullerGaussianDistributionTests.cs" />
