--- a/Redzen.UnitTests/Redzen.UnitTests.csproj
+++ b/Redzen.UnitTests/Redzen.UnitTests.csproj
@@ -8,8 +8,8 @@
   <ItemGroup>
     <PackageReference Include="MathNet.Numerics" Version="4.4.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.3.0-beta2" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.3.0-beta2" />    
+    <PackageReference Include="MSTest.TestAdapter" Version="1.2.1" />
+    <PackageReference Include="MSTest.TestFramework" Version="1.2.1" />    
   </ItemGroup>
 
   <ItemGroup>
