--- a/Redzen/Redzen.csproj
+++ b/Redzen/Redzen.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>7.2.2.0</Version>
+    <Version>7.2.3.0</Version>
     <Copyright>Copyright Colin D. Green 2016-2018</Copyright>
     <Description>General purpose C# code library.</Description>
     <PackageLicenseUrl>http://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/colgreen/Redzen</PackageProjectUrl>
     <PackageTags>C# .NET rng prng ziggurat gaussian io sorting timsort xoshiro</PackageTags>
-    <PackageReleaseNotes>Fix: DefaultRandomSeedSource.GetSeed() threw IndexOutOfRangeException on machine there  Environment.ProcessorCount was not a power of two (e.g. 6 core AMD Ryzen).
+    <PackageReleaseNotes>Performance improvements to EnumerableUtils.RangeRandomOrder() and DefaultRandomSeedSource.GetSeed().
 </PackageReleaseNotes>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>colindgreen.pfx</AssemblyOriginatorKeyFile>
