--- a/Redzen.UnitTests/Redzen.UnitTests.csproj
+++ b/Redzen.UnitTests/Redzen.UnitTests.csproj
@@ -9,7 +9,8 @@
     <PackageReference Include="MathNet.Numerics" Version="4.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />    
+    <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
+    <PackageReference Include="System.Memory" Version="4.5.1" />    
   </ItemGroup>
 
   <ItemGroup>
