--- a/Redzen/Redzen.csproj
+++ b/Redzen/Redzen.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>8.0.0.0-alpha9</Version>
+    <Version>8.0.0.0</Version>
     <Copyright>Copyright Colin D. Green 2016-2018</Copyright>
     <Description>General purpose C# code library.</Description>
     <PackageLicenseUrl>http://opensource.org/licenses/MIT</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/colgreen/Redzen</PackageProjectUrl>
     <PackageTags>C# .NET rng prng ziggurat gaussian io sorting timsort xoshiro</PackageTags>
-    <PackageReleaseNotes>Performance improvements to EnumerableUtils.RangeRandomOrder() and DefaultRandomSeedSource.GetSeed().</PackageReleaseNotes>
+    <PackageReleaseNotes>Refactor of distribution classes. Thread sync fix on DefaultRandomSeedSource. Minor performance improvements.</PackageReleaseNotes>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>colindgreen.pfx</AssemblyOriginatorKeyFile>
     <Authors>Colin D. Green</Authors>
