- Enabled Stylecop rules for redzen.csproj. - Remove a single space in all copies of the standard header, as this violates astylecop rule that it would be good to keep.

--- a/Redzen/Redzen.csproj
+++ b/Redzen/Redzen.csproj
@@ -24,4 +24,11 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
