- Moved the core span sorting performance test code into new general purpose classes SpanSortPerf, SpanSortKVPerf, SpanSortKVWPerf. - Added TimSortPerf, MemoryExtensionsSortPerf, MemoryExtensionsSortKVPerf.

--- a/Redzen.Benchmarks/Redzen.Benchmarks.csproj
+++ b/Redzen.Benchmarks/Redzen.Benchmarks.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Sorting\TimSortPerf.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
   </ItemGroup>
 
@@ -24,6 +28,10 @@
 
   <ItemGroup>
     <Folder Include="Properties\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Sorting\TimSortPerf.cs" />
   </ItemGroup>
 
 </Project>
