- Sorting becnhmarks: Reduced ArrayCount from 1000 to 100 (the benchmarks were taking too long). - Added TimSortKVBenchmarks, TimSortKVWBenchmarks. - Timsort bencmarks now use re-usable working arrays. This removes array alloc overhead from each iteration.

--- a/Redzen.Benchmarks/Redzen.Benchmarks.csproj
+++ b/Redzen.Benchmarks/Redzen.Benchmarks.csproj
@@ -6,6 +6,7 @@
     <ApplicationIcon />
     <OutputType>Exe</OutputType>
     <StartupObject />
+    <ServerGarbageCollection>true</ServerGarbageCollection>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,19 +16,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Remove="Sorting\TimSortPerf.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Redzen\Redzen.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Sorting\TimSortPerf.cs" />
   </ItemGroup>
 
 </Project>
